Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21908

"Detach Debugger" menu kills the process instead of detaching from it

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.8.2
    • Qt Creator 4.8.2
    • Debugger
    • None
    • Ubuntu 18.04, Qt Creator 4.8.2 (rev 80a92d55d3) compiled from source
    • Linux/X11
    • 18f1a8d759073e4d8cddfaa99a77c72f21efa5c3

      To reproduce:

      1. Make a new project, with code containing an infinite loop
      2. Set breakpoint at main, start debugger
      3. Make sure the process can be seen via something like ps -A|grep test
      4. Choose menu DebugDetach Debugger
      5. Check once again for the process as in step 3, see it's gone

      If you instead issued detach command in the Debugger Log, this would work as expected: the debugger (GDB) is no longer attached to the process, debugging session has ended, and the process lives on.

      Qt Creator's Detach Debugger menu also shouldn't kill the inferior.

        For Gerrit Dashboard: QTCREATORBUG-21908
        # Subject Branch Project Status CR V

            hjk hjk
            10110111 Ruslan Kabatsayev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes