Debugger: Fix gdb detaching

Too much cleverness in python command detection: "attach" is parsed
as possible Python command. Make it explicit that it is not.

Task-number: QTCREATORBUG-21908
Change-Id: I68444bccfb485ef1befe81b4b6b13243c2c8a500
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>